# shuup-admin-channel

./: MANIFEST.in  README.md  setup.cfg
shuup_admin_channel/: .gitignore  apps.py  browser_config.py  build.js  consumers.py  handlers.py  package.json  resources.py  settings.py  signal_handling.py  urls.py  utils.py
shuup_admin_channel/static_src/: shuup-admin-channel.js
shuup_admin_channel_tests/: settings.py
