[metadata]
name = shuup-admin-channel
version = 1.0.0.post+gitver
description = Adds a generic and extendable channel to Admin module using Shuup Channels.
long_description = file: README.md
keywords = shuup websocket channels
url = https://github.com/chessbr/shuup-admin-channel
license = MIT
author = Christian Hess

[options]
include_package_data = True
packages = find:
install_requires =
    shuup
    shuup-channels

[options.entry_points]
shuup.addon = shuup_admin_channel = shuup_admin_channel

[options.packages.find]
exclude = tests, tests.*

[bdist_wheel]
universal = 1

[tool:pytest]
DJANGO_SETTINGS_MODULE = shuup_admin_channel_tests.settings
django_find_project = false
norecursedirs = node_modules .git

[flake8]
exclude = dist,build,migrations,docs,shuup_admin_channel_tests
max-line-length = 120
max-complexity = 10

[isort]
atomic=true
combine_as_imports=false
indent=4
known_first_party=shuup_admin_channel
known_standard_library=token,tokenize,enum,importlib
known_third_party=django,shuup,shuup_*
length_sort=false
line_length=79
multi_line_output=5
order_by_type=false
skip=migrations,doc,build,shuup_admin_channel_tests,node_modules
not_skip=__init__.py
wrap_length=79
diff=True
